--- a/landing/playground.html
+++ b/landing/playground.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet"> 
 	<title>Landing page</title>
 </head>
 <body>
