--- a/landing/playground.html
+++ b/landing/playground.html
@@ -7,28 +7,40 @@
 	<title>Landing page</title>
 </head>
 <body>
-	<h1>My new startup</h1>
-	<h2>This is the important line</h2>
-	<p>
-		<a href="#">Enroll</a>
-	</p>
+	<div id="banner">
+        <h1>My new startup</h1>
+        <h2>This is the important line</h2>
+        <p>
+            <a href="#">Enroll</a>
+        </p>   
+    </div>
 
-	<img src="images/briefcase.png" alt="picture description" width="100">
-    <h2>Fast</h2>
-    <p>A fast app, <strong>very fast</strong> app</p>
+	<div class="cards">
+        <img src="images/briefcase.png" alt="picture description" width="100">
+        <h2>Fast</h2>
+        <p>A fast app, <strong>very fast</strong> app</p>   
+    </div>
 
-    <img src="images/diamond.png" alt="picture description" width="100">
-    <h2>Simple</h2>
-    <p>A simple app, <strong>very simple</strong> app</p>
+    <div class="cards">
+        <img src="images/diamond.png" alt="picture description" width="100">
+        <h2>Simple</h2>
+        <p>A simple app, <strong>very simple</strong> app</p>
+    </div>
 
-    <img src="images/heart.png" alt="picture description" width="100">
-    <h2>Awesome</h2>
-    <p>An awesome app, <strong>very awesome</strong> app</p>
+    <div class="cards">
+        <img src="images/heart.png" alt="picture description" width="100">
+        <h2>Awesome</h2>
+        <p>An awesome app, <strong>very awesome</strong> app</p>
+    </div>
 
-    <img src="images/laptop.png" alt="picture description" width="100">
-    <h2>Beautiful</h2>
-    <p>A beautiful app, <strong>very beautiful</strong> app</p>
+    <div class="cards">
+        <img src="images/laptop.png" alt="picture description" width="100">
+        <h2>Beautiful</h2>
+        <p>A beautiful app, <strong>very beautiful</strong> app</p>
+    </div>
 
-    <p>This is a playground landing ©Morganna</p>
+    <div id="footer">
+        <p>This is a playground landing ©Morganna</p>
+    </div>
 </body>
 </html>
