--- a/landing/playground.html
+++ b/landing/playground.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<title>Landing page</title>
 </head>
 <body>
@@ -11,36 +13,54 @@
         <h1>My new startup</h1>
         <h2>This is the important line</h2>
         <p>
-            <a href="#">Enroll</a>
+            <a class="btn btn-primary" href="#">Enroll</a>
         </p>   
     </div>
 
-	<div class="cards">
-        <img src="images/briefcase.png" alt="picture description" width="100">
-        <h2>Fast</h2>
-        <p>A fast app, <strong>very fast</strong> app</p>   
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-3">
+            	<div class="cards text-center">
+                    <img src="images/briefcase.png" alt="picture description" width="100">
+                    <h2>Fast</h2>
+                    <p>A fast app, <strong>very fast</strong> app</p>   
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="cards text-center">
+                    <img src="images/diamond.png" alt="picture description" width="100">
+                    <h2>Simple</h2>
+                    <p>A simple app, <strong>very simple</strong> app</p>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="cards text-center">
+                    <img src="images/heart.png" alt="picture description" width="100">
+                    <h2>Awesome</h2>
+                    <p>An awesome app, <strong>very awesome</strong> app</p>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="cards text-center">
+                    <img src="images/laptop.png" alt="picture description" width="100">
+                    <h2>Beautiful</h2>
+                    <p>A beautiful app, <strong>very beautiful</strong> app</p>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="cards">
-        <img src="images/diamond.png" alt="picture description" width="100">
-        <h2>Simple</h2>
-        <p>A simple app, <strong>very simple</strong> app</p>
-    </div>
-
-    <div class="cards">
-        <img src="images/heart.png" alt="picture description" width="100">
-        <h2>Awesome</h2>
-        <p>An awesome app, <strong>very awesome</strong> app</p>
-    </div>
-
-    <div class="cards">
-        <img src="images/laptop.png" alt="picture description" width="100">
-        <h2>Beautiful</h2>
-        <p>A beautiful app, <strong>very beautiful</strong> app</p>
-    </div>
-
-    <div id="footer">
-        <p>This is a playground landing ©Morganna</p>
+    <div id="footer">  
+        <p>This is a playground landing ©Morganna</p>      
+        <ul class="list-inline">
+          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fa fa-github"></i></a></li>
+        </ul>
     </div>
 </body>
 </html>
